--- a/note.html
+++ b/note.html
@@ -6,28 +6,47 @@
 <title>Note Editor</title>
 
 <style>
-/* CSS sama persis versi rapih lo sebelumnya */
 *{box-sizing:border-box}
-body{margin:0;background:#f3f4f6;font-family:system-ui,Arial,sans-serif;color:#111}
+body{margin:0;background:#f3f4f6;font-family:system-ui,Arial;color:#111}
+
 .wrap{max-width:720px;margin:12px auto;background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 2px 10px rgba(0,0,0,.1)}
 .section{max-width:720px;margin:16px auto;padding:0 6px}
+
 .header{padding:12px;border-bottom:1px solid #ddd}
-.header input{width:100%;padding:10px 12px;font-size:16px;border:1px solid #ccc;border-radius:8px;outline:none}
+.header input{width:100%;padding:10px 12px;font-size:16px;border:1px solid #ccc;border-radius:8px}
+
 .tabs{display:flex;justify-content:flex-end;border-bottom:1px solid #ddd}
-.tab{padding:8px 14px;font-weight:600;cursor:pointer;background:#e5e7eb;color:#555}
+.tab{padding:8px 14px;font-weight:600;background:#e5e7eb;color:#555;cursor:pointer}
 .tab.active{background:#fff;color:#dc2626;border-bottom:2px solid #dc2626}
+
 .toolbar{display:flex;gap:6px;padding:8px;border-bottom:1px solid #ddd;overflow-x:auto}
 .toolbar button{background:none;border:none;padding:6px;border-radius:6px;cursor:pointer}
 .toolbar button:hover{background:#e5e7eb}
 .toolbar svg{width:20px;height:20px;stroke:#111}
-.editor,textarea{width:calc(100% - 20px);min-height:260px;margin:10px;padding:12px;border-radius:8px;border:2px solid #2563eb;outline:none}
-.editor{display:block}
+
+.editor,textarea{
+  width:calc(100% - 20px);
+  min-height:260px;
+  margin:10px;
+  padding:12px;
+  border-radius:8px;
+  border:2px solid #2563eb;
+  outline:none;
+}
 .editor img{max-width:100%;height:auto;display:block;margin:8px auto;border-radius:6px}
 textarea{display:none;resize:vertical}
+
 .footer{display:flex;flex-direction:column;gap:8px;padding:12px;border-top:1px solid #ddd}
-.footer select,.footer input,.footer button{width:100%;padding:10px;font-weight:600;border-radius:8px;border:1px solid #ccc}
+.footer select,.footer input,.footer button{
+  width:100%;padding:10px;border-radius:8px;border:1px solid #ccc;font-weight:600
+}
 .footer button.publish{background:#dc2626;color:#fff;border:none;cursor:pointer}
-.card{background:#fff;padding:12px;border-radius:10px;margin-bottom:10px;display:flex;justify-content:space-between;align-items:center;gap:10px;box-shadow:0 2px 8px rgba(0,0,0,.08)}
+
+.card{
+  background:#fff;padding:12px;border-radius:10px;margin-bottom:10px;
+  display:flex;justify-content:space-between;align-items:center;gap:10px;
+  box-shadow:0 2px 8px rgba(0,0,0,.08)
+}
 .card span{font-size:13px;word-break:break-all}
 .actions{display:flex;gap:6px;flex-wrap:wrap}
 .card button{padding:6px 10px;border-radius:6px;border:1px solid #ccc;background:#f9fafb;font-weight:600;cursor:pointer}
@@ -35,30 +54,48 @@ textarea{display:none;resize:vertical}
 small{color:#666}
 </style>
 </head>
+
 <body>
 
 <div class="wrap">
-  <div class="header"><input id="title" placeholder="Title"></div>
+  <div class="header">
+    <input id="title" placeholder="Title">
+  </div>
+
   <div class="tabs">
-    <div class="tab active" onclick="showEditor()">EDITOR</div>
-    <div class="tab" onclick="showHTML()">HTML</div>
+    <div class="tab active" id="tabEditor">EDITOR</div>
+    <div class="tab" id="tabHTML">HTML</div>
   </div>
 
   <div class="toolbar">
-    <button onclick="cmd('bold')">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2"><path d="M6 4h7a4 4 0 0 1 0 8H6z"/><path d="M6 12h8a4 4 0 0 1 0 8H6z"/></svg>
+    <button data-cmd="bold">
+      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+        <path d="M6 4h7a4 4 0 0 1 0 8H6z"/>
+        <path d="M6 12h8a4 4 0 0 1 0 8H6z"/>
+      </svg>
     </button>
-    <button onclick="cmd('justifyLeft')">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2"><line x1="3" y1="6" x2="21" y2="6"/><line x1="3" y1="12" x2="15" y2="12"/><line x1="3" y1="18" x2="21" y2="18"/></svg>
+    <button data-cmd="insertUnorderedList">
+      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+        <line x1="8" y1="6" x2="21" y2="6"/>
+        <line x1="8" y1="12" x2="21" y2="12"/>
+        <line x1="8" y1="18" x2="21" y2="18"/>
+        <circle cx="4" cy="6" r="1"/>
+        <circle cx="4" cy="12" r="1"/>
+        <circle cx="4" cy="18" r="1"/>
+      </svg>
     </button>
-    <button onclick="pickImage()">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2"><rect x="3" y="3" width="18" height="18" rx="2"/><circle cx="8" cy="8" r="2"/><path d="M21 15l-5-5L5 21"/></svg>
+    <button id="btnImage">
+      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+        <rect x="3" y="3" width="18" height="18" rx="2"/>
+        <circle cx="8" cy="8" r="2"/>
+        <path d="M21 15l-5-5L5 21"/>
+      </svg>
     </button>
-    <button onclick="cmd('insertUnorderedList')">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2"><line x1="8" y1="6" x2="21" y2="6"/><line x1="8" y1="12" x2="21" y2="12"/><line x1="8" y1="18" x2="21" y2="18"/><circle cx="4" cy="6" r="1"/><circle cx="4" cy="12" r="1"/><circle cx="4" cy="18" r="1"/></svg>
-    </button>
-    <button onclick="cmd('undo')">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2"><path d="M9 14l-4-4 4-4"/><path d="M20 20a8 8 0 0 0-8-8H5"/></svg>
+    <button data-cmd="undo">
+      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+        <path d="M9 14l-4-4 4-4"/>
+        <path d="M20 20a8 8 0 0 0-8-8H5"/>
+      </svg>
     </button>
   </div>
 
@@ -66,12 +103,12 @@ small{color:#666}
   <textarea id="html"></textarea>
 
   <div class="footer">
-    <select id="visibility" onchange="togglePassword()">
+    <select id="visibility">
       <option value="public">Public</option>
       <option value="private">Private</option>
     </select>
     <input id="password" placeholder="Password (private)" style="display:none">
-    <button class="publish" onclick="publish()">Publish</button>
+    <button class="publish" id="publishBtn">Publish</button>
   </div>
 </div>
 
@@ -87,98 +124,109 @@ small{color:#666}
 
 <input type="file" id="imgPick" accept="image/*" hidden>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.26.0/dist/supabase.min.js"></script>
+<!-- SUPABASE -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
-// Supabase
-const supabaseUrl = 'https://reglvenhbvmyqujoydil.supabase.co'
-const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJlZ2x2ZW5oYnZteXF1am95ZGlsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjcyMzc2MDQsImV4cCI6MjA4MjgxMzYwNH0.h-UEIR98TT8TynjraSQi7iwUrnCQ0nLuFJKaHPbOSUc'
-const supabase = Supabase.createClient(supabaseUrl,supabaseKey)
-const tableName='notes'
+const supabase = supabaseJs.createClient(
+  "https://reglvenhbvmyqujoydil.supabase.co",
+  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJlZ2x2ZW5oYnZteXF1am95ZGlsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjcyMzc2MDQsImV4cCI6MjA4MjgxMzYwNH0.h-UEIR98TT8TynjraSQi7iwUrnCQ0nLuFJKaHPbOSUc"
+);
+</script>
 
-const editor=document.getElementById('editor')
-const html=document.getElementById('html')
-const links=document.getElementById('links')
-const historyBox=document.getElementById('history')
-const imgPick=document.getElementById('imgPick')
-const title=document.getElementById('title')
-const visibility=document.getElementById('visibility')
-const password=document.getElementById('password')
+<script>
+const editor=document.getElementById('editor');
+const html=document.getElementById('html');
+const title=document.getElementById('title');
+const visibility=document.getElementById('visibility');
+const password=document.getElementById('password');
+const links=document.getElementById('links');
+const historyBox=document.getElementById('history');
+const imgPick=document.getElementById('imgPick');
 
-let notes=[]
-let tempLink=null
+const tabEditor=document.getElementById('tabEditor');
+const tabHTML=document.getElementById('tabHTML');
 
-function cmd(c){editor.focus();document.execCommand(c,false,null)}
-function pickImage(){editor.focus();imgPick.value='';imgPick.click()}
-imgPick.onchange=e=>{
-  const f=e.target.files[0];if(!f)return
-  const r=new FileReader()
-  r.onload=()=>{editor.focus();document.execCommand('insertImage',false,r.result)}
-  r.readAsDataURL(f)
-}
-
-// TAB
-function showHTML(){html.value=editor.innerHTML;editor.style.display='none';html.style.display='block';setTab(1)}
-function showEditor(){editor.innerHTML=html.value;html.style.display='none';editor.style.display='block';setTab(0)}
-function setTab(i){document.querySelectorAll('.tab').forEach((t,n)=>t.classList.toggle('active',n===i))}
-
-// Password toggle
-function togglePassword(){password.style.display=visibility.value==='private'?'block':'none';if(visibility.value!=='private')password.value=''}
-
-// ID generator
 function genID(){return Math.random().toString(36).slice(2,7)}
 
-// Fetch notes
-async function fetchNotes(){
-  const { data,error } = await supabase.from(tableName).select('*').order('created_at',{ascending:false})
-  if(error) console.error(error)
-  else notes=data
-  render()
-}
+tabEditor.onclick=()=>{
+  editor.innerHTML=html.value;
+  html.style.display='none';
+  editor.style.display='block';
+  tabEditor.classList.add('active');
+  tabHTML.classList.remove('active');
+};
 
-// Publish note
-async function publish(){
-  if(html.style.display==='block')editor.innerHTML=html.value
-  const id=genID()
-  const noteData={
-    id,
+tabHTML.onclick=()=>{
+  html.value=editor.innerHTML;
+  editor.style.display='none';
+  html.style.display='block';
+  tabHTML.classList.add('active');
+  tabEditor.classList.remove('active');
+};
+
+document.querySelectorAll('[data-cmd]').forEach(btn=>{
+  btn.onclick=()=>{
+    editor.focus();
+    document.execCommand(btn.dataset.cmd,false,null);
+  };
+});
+
+document.getElementById('btnImage').onclick=()=>{
+  imgPick.value='';
+  imgPick.click();
+};
+
+imgPick.onchange=e=>{
+  const f=e.target.files[0];
+  if(!f)return;
+  const r=new FileReader();
+  r.onload=()=>document.execCommand('insertImage',false,r.result);
+  r.readAsDataURL(f);
+};
+
+visibility.onchange=()=>{
+  password.style.display=visibility.value==='private'?'block':'none';
+  if(visibility.value!=='private')password.value='';
+};
+
+document.getElementById('publishBtn').onclick=async()=>{
+  if(html.style.display==='block')editor.innerHTML=html.value;
+
+  const data={
+    id:genID(),
     title:title.value||'Untitled',
     content:editor.innerHTML,
     visibility:visibility.value,
-    password:password.value||''
-  }
-  const {data,error}=await supabase.from(tableName).insert([noteData])
-  if(error) return alert('Publish gagal: '+error.message)
-  tempLink=`https://narapoi.pages.dev/v/view.html?id=${id}`
-  fetchNotes()
-}
+    password:password.value||null
+  };
 
-// Delete / Edit
-async function deleteNote(id){if(!confirm('Yakin hapus note ini?'))return; const {error}=await supabase.from(tableName).delete().eq('id',id);if(error)return alert(error.message); tempLink=null;fetchNotes()}
-async function loadEdit(id){const note=notes.find(n=>n.id===id);if(!note)return;title.value=note.title;editor.innerHTML=note.content;visibility.value=note.visibility;password.value=note.password||'';togglePassword();tempLink=null;render()}
+  const {error}=await supabase.from('notes').insert([data]);
+  if(error){alert('Publish gagal');return;}
 
-// Render
-function render(){
-  links.innerHTML=''
-  historyBox.innerHTML=''
-  if(tempLink) links.innerHTML=`<div class="card"><span>${tempLink}</span><button onclick="navigator.clipboard.writeText('${tempLink}')">Salin</button></div>`
-  notes.forEach(n=>{
-    historyBox.innerHTML+=`
+  links.innerHTML=`
     <div class="card">
-      <div>
-        <b>${n.title}</b><br><small>${new Date(n.created_at||Date.now()).toLocaleString()}</small>
-      </div>
-      <div class="actions">
-        <button onclick="window.open('https://narapoi.pages.dev/v/view.html?id=${n.id}')">Lihat</button>
-        <button onclick="loadEdit('${n.id}')">Edit</button>
-        <button class="danger" onclick="deleteNote('${n.id}')">Hapus</button>
-      </div>
-    </div>`
-  })
+      <span>https://narapoi.pages.dev/v/view.html?id=${data.id}</span>
+      <button onclick="navigator.clipboard.writeText('https://narapoi.pages.dev/v/view.html?id=${data.id}')">Salin</button>
+    </div>`;
+  loadHistory();
+};
+
+async function loadHistory(){
+  const {data}=await supabase.from('notes').select('*').order('created_at',{ascending:false});
+  historyBox.innerHTML='';
+  data.forEach(n=>{
+    historyBox.innerHTML+=`
+      <div class="card">
+        <div><b>${n.title}</b><br><small>${n.created_at}</small></div>
+        <div class="actions">
+          <button onclick="window.open('https://narapoi.pages.dev/v/view.html?id=${n.id}')">Lihat</button>
+        </div>
+      </div>`;
+  });
 }
 
-// Init
-togglePassword()
-fetchNotes()
+loadHistory();
 </script>
+
 </body>
 </html>
